fix: paddings, margins, borders, course info horizontal scroll

--- a/base-theme/assets/css/main.scss
+++ b/base-theme/assets/css/main.scss
@@ -286,6 +286,10 @@ table {
   border-bottom: 1px solid $medium-gray;
 }
 
+.border-top-gray {
+  border-top: 1px solid $medium-gray;
+}
+
 .border-gray {
   border: 1px solid $medium-gray;
 }
